--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <aside class="intro">
-      <img src="./eisenhower-matrix.jpg" alt="matrix">
+  <body class="page__app">
+    <aside class="app__image">
+      <img src="./assets/img/eisenhower-matrix.jpg" alt="matrix">
       <a 
-          class="more-inf" 
+          class="image__info" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
@@ -24,35 +24,35 @@
         <button>Add</button>
       </section>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
+      <ul id="main__incomplete-tasks">
+        <li class="incomplete-tasks__todo-mode">
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="remove">
+            <img src="./assets/icon/remove.svg" alt="remove">
           </button>
         </li>
-        <li class="edit-mode">
+        <li class="incomplete-tasks__edit-mode">
           <input type="checkbox">
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg" alt="remove">
+            <img src="./assets/icon/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
       <h3>Completed</h3>
-      <ul id="completed-tasks">
+      <ul id="main__completed-tasks">
         <li>
           <input type="checkbox" checked>
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="remove">
+            <img src="./assets/icon/remove.svg" alt="remove">
           </button>
         </li>
       </ul>
